src/main/java/jorge/parser/GramaticaParser.java
// Generated from Gramatica.g4 by ANTLR 4.7.2
package jorge.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GramaticaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, FOR=9, 
		AND=10, OR=11, TRUE=12, FALSE=13, MAYORQ=14, MENORQ=15, MENORIGUAL=16, 
		MAYORIGUAL=17, IGUAL=18, DIFERENTE=19, POTENTIA=20, TOTUM=21, TRISTEQUE=22, 
		SIGNO=23, FILUM=24, INANIS=25, MAJOR=26, IMPRIMERE=27, PLUS=28, MINUS=29, 
		DIVISIO=30, BY=31, IDEM=32, TRSITE=33, ID=34, NUM=35, COMMENT=36, COM=37, 
		AS=38;
	public static final int
		RULE_major = 0, RULE_caput = 1, RULE_aperta = 2, RULE_claudure = 3, RULE_corpus = 4, 
		RULE_assignment = 5, RULE_imprimeres = 6, RULE_imprimere = 7, RULE_declarare = 8, 
		RULE_delarareasignare = 9, RULE_cond = 10, RULE_condsi = 11, RULE_conelse = 12, 
		RULE_conelseif = 13, RULE_confor = 14, RULE_expr = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"major", "caput", "aperta", "claudure", "corpus", "assignment", "imprimeres", 
			"imprimere", "declarare", "delarareasignare", "cond", "condsi", "conelse", 
			"conelseif", "confor", "expr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'{'", "'}'", "'if'", "'else'", "'++'", "'--'", "'for'", 
			"'&&'", "'||'", "'true'", "'false'", "'>'", "'<'", "'<='", "'>='", "'=='", 
			"'!='", "'^'", "'totum'", "'tristeque'", "';'", null, "'inanis'", "'major'", 
			"'imprimere'", "'+'", "'-'", "'/'", "'*'", "'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, "FOR", "AND", "OR", 
			"TRUE", "FALSE", "MAYORQ", "MENORQ", "MENORIGUAL", "MAYORIGUAL", "IGUAL", 
			"DIFERENTE", "POTENTIA", "TOTUM", "TRISTEQUE", "SIGNO", "FILUM", "INANIS", 
			"MAJOR", "IMPRIMERE", "PLUS", "MINUS", "DIVISIO", "BY", "IDEM", "TRSITE", 
			"ID", "NUM", "COMMENT", "COM", "AS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Gramatica.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GramaticaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class MajorContext extends ParserRuleContext {
		public CaputContext caput() {
			return getRuleContext(CaputContext.class,0);
		}
		public ApertaContext aperta() {
			return getRuleContext(ApertaContext.class,0);
		}
		public CorpusContext corpus() {
			return getRuleContext(CorpusContext.class,0);
		}
		public ClaudureContext claudure() {
			return getRuleContext(ClaudureContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GramaticaParser.EOF, 0); }
		public MajorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_major; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitMajor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MajorContext major() throws RecognitionException {
		MajorContext _localctx = new MajorContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_major);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			caput();
			setState(33);
			aperta();
			setState(34);
			corpus();
			setState(35);
			claudure();
			setState(36);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CaputContext extends ParserRuleContext {
		public TerminalNode INANIS() { return getToken(GramaticaParser.INANIS, 0); }
		public TerminalNode MAJOR() { return getToken(GramaticaParser.MAJOR, 0); }
		public CaputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_caput; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitCaput(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CaputContext caput() throws RecognitionException {
		CaputContext _localctx = new CaputContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_caput);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			match(INANIS);
			setState(39);
			match(MAJOR);
			setState(40);
			match(T__0);
			setState(41);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ApertaContext extends ParserRuleContext {
		public ApertaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aperta; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitAperta(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ApertaContext aperta() throws RecognitionException {
		ApertaContext _localctx = new ApertaContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_aperta);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClaudureContext extends ParserRuleContext {
		public ClaudureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_claudure; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitClaudure(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClaudureContext claudure() throws RecognitionException {
		ClaudureContext _localctx = new ClaudureContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_claudure);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CorpusContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<AssignmentContext> assignment() {
			return getRuleContexts(AssignmentContext.class);
		}
		public AssignmentContext assignment(int i) {
			return getRuleContext(AssignmentContext.class,i);
		}
		public List<ImprimeresContext> imprimeres() {
			return getRuleContexts(ImprimeresContext.class);
		}
		public ImprimeresContext imprimeres(int i) {
			return getRuleContext(ImprimeresContext.class,i);
		}
		public List<DeclarareContext> declarare() {
			return getRuleContexts(DeclarareContext.class);
		}
		public DeclarareContext declarare(int i) {
			return getRuleContext(DeclarareContext.class,i);
		}
		public List<DelarareasignareContext> delarareasignare() {
			return getRuleContexts(DelarareasignareContext.class);
		}
		public DelarareasignareContext delarareasignare(int i) {
			return getRuleContext(DelarareasignareContext.class,i);
		}
		public List<CondsiContext> condsi() {
			return getRuleContexts(CondsiContext.class);
		}
		public CondsiContext condsi(int i) {
			return getRuleContext(CondsiContext.class,i);
		}
		public List<ConforContext> confor() {
			return getRuleContexts(ConforContext.class);
		}
		public ConforContext confor(int i) {
			return getRuleContext(ConforContext.class,i);
		}
		public CorpusContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_corpus; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitCorpus(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CorpusContext corpus() throws RecognitionException {
		CorpusContext _localctx = new CorpusContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_corpus);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << FOR) | (1L << TOTUM) | (1L << TRISTEQUE) | (1L << IMPRIMERE) | (1L << TRSITE) | (1L << ID) | (1L << NUM))) != 0)) {
				{
				setState(54);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(47);
					expr(0);
					}
					break;
				case 2:
					{
					setState(48);
					assignment();
					}
					break;
				case 3:
					{
					setState(49);
					imprimeres();
					}
					break;
				case 4:
					{
					setState(50);
					declarare();
					}
					break;
				case 5:
					{
					setState(51);
					delarareasignare();
					}
					break;
				case 6:
					{
					setState(52);
					condsi();
					}
					break;
				case 7:
					{
					setState(53);
					confor();
					}
					break;
				}
				}
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
	 
		public AssignmentContext() { }
		public void copyFrom(AssignmentContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AssignmenttContext extends AssignmentContext {
		public TerminalNode ID() { return getToken(GramaticaParser.ID, 0); }
		public TerminalNode IDEM() { return getToken(GramaticaParser.IDEM, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SIGNO() { return getToken(GramaticaParser.SIGNO, 0); }
		public AssignmenttContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitAssignmentt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_assignment);
		try {
			_localctx = new AssignmenttContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			match(ID);
			setState(60);
			match(IDEM);
			setState(61);
			expr(0);
			setState(62);
			match(SIGNO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImprimeresContext extends ParserRuleContext {
		public ImprimeresContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imprimeres; }
	 
		public ImprimeresContext() { }
		public void copyFrom(ImprimeresContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ImprimeressContext extends ImprimeresContext {
		public TerminalNode IMPRIMERE() { return getToken(GramaticaParser.IMPRIMERE, 0); }
		public ImprimereContext imprimere() {
			return getRuleContext(ImprimereContext.class,0);
		}
		public TerminalNode SIGNO() { return getToken(GramaticaParser.SIGNO, 0); }
		public ImprimeressContext(ImprimeresContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitImprimeress(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImprimeresContext imprimeres() throws RecognitionException {
		ImprimeresContext _localctx = new ImprimeresContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_imprimeres);
		try {
			_localctx = new ImprimeressContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(IMPRIMERE);
			setState(65);
			match(T__0);
			setState(66);
			imprimere();
			setState(67);
			match(T__1);
			setState(68);
			match(SIGNO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImprimereContext extends ParserRuleContext {
		public ImprimereContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imprimere; }
	 
		public ImprimereContext() { }
		public void copyFrom(ImprimereContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ImprimerexprContext extends ImprimereContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ImprimerexprContext(ImprimereContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitImprimerexpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ImprimereeContext extends ImprimereContext {
		public TerminalNode FILUM() { return getToken(GramaticaParser.FILUM, 0); }
		public ImprimereeContext(ImprimereContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitImprimeree(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImprimereContext imprimere() throws RecognitionException {
		ImprimereContext _localctx = new ImprimereContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_imprimere);
		try {
			setState(72);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FILUM:
				_localctx = new ImprimereeContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(70);
				match(FILUM);
				}
				break;
			case TRSITE:
			case ID:
			case NUM:
				_localctx = new ImprimerexprContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(71);
				expr(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarareContext extends ParserRuleContext {
		public DeclarareContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarare; }
	 
		public DeclarareContext() { }
		public void copyFrom(DeclarareContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeclarareeContext extends DeclarareContext {
		public TerminalNode TOTUM() { return getToken(GramaticaParser.TOTUM, 0); }
		public TerminalNode ID() { return getToken(GramaticaParser.ID, 0); }
		public TerminalNode SIGNO() { return getToken(GramaticaParser.SIGNO, 0); }
		public DeclarareeContext(DeclarareContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitDeclararee(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DeclararetristContext extends DeclarareContext {
		public TerminalNode TRISTEQUE() { return getToken(GramaticaParser.TRISTEQUE, 0); }
		public TerminalNode ID() { return getToken(GramaticaParser.ID, 0); }
		public TerminalNode SIGNO() { return getToken(GramaticaParser.SIGNO, 0); }
		public DeclararetristContext(DeclarareContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitDeclararetrist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarareContext declarare() throws RecognitionException {
		DeclarareContext _localctx = new DeclarareContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_declarare);
		try {
			setState(80);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TOTUM:
				_localctx = new DeclarareeContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(74);
				match(TOTUM);
				setState(75);
				match(ID);
				setState(76);
				match(SIGNO);
				}
				break;
			case TRISTEQUE:
				_localctx = new DeclararetristContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				match(TRISTEQUE);
				setState(78);
				match(ID);
				setState(79);
				match(SIGNO);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DelarareasignareContext extends ParserRuleContext {
		public DelarareasignareContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_delarareasignare; }
	 
		public DelarareasignareContext() { }
		public void copyFrom(DelarareasignareContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeclarassignareContext extends DelarareasignareContext {
		public TerminalNode TOTUM() { return getToken(GramaticaParser.TOTUM, 0); }
		public TerminalNode ID() { return getToken(GramaticaParser.ID, 0); }
		public TerminalNode IDEM() { return getToken(GramaticaParser.IDEM, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SIGNO() { return getToken(GramaticaParser.SIGNO, 0); }
		public DeclarassignareContext(DelarareasignareContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitDeclarassignare(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DeclarassignaretristContext extends DelarareasignareContext {
		public TerminalNode TRISTEQUE() { return getToken(GramaticaParser.TRISTEQUE, 0); }
		public TerminalNode ID() { return getToken(GramaticaParser.ID, 0); }
		public TerminalNode IDEM() { return getToken(GramaticaParser.IDEM, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SIGNO() { return getToken(GramaticaParser.SIGNO, 0); }
		public DeclarassignaretristContext(DelarareasignareContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitDeclarassignaretrist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DelarareasignareContext delarareasignare() throws RecognitionException {
		DelarareasignareContext _localctx = new DelarareasignareContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_delarareasignare);
		try {
			setState(94);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TRISTEQUE:
				_localctx = new DeclarassignaretristContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(82);
				match(TRISTEQUE);
				setState(83);
				match(ID);
				setState(84);
				match(IDEM);
				setState(85);
				expr(0);
				setState(86);
				match(SIGNO);
				}
				break;
			case TOTUM:
				_localctx = new DeclarassignareContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(88);
				match(TOTUM);
				setState(89);
				match(ID);
				setState(90);
				match(IDEM);
				setState(91);
				expr(0);
				setState(92);
				match(SIGNO);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondContext extends ParserRuleContext {
		public CondContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cond; }
	 
		public CondContext() { }
		public void copyFrom(CondContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class OranContext extends CondContext {
		public Token op;
		public List<CondContext> cond() {
			return getRuleContexts(CondContext.class);
		}
		public CondContext cond(int i) {
			return getRuleContext(CondContext.class,i);
		}
		public TerminalNode OR() { return getToken(GramaticaParser.OR, 0); }
		public TerminalNode AND() { return getToken(GramaticaParser.AND, 0); }
		public OranContext(CondContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitOran(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ConrealContext extends CondContext {
		public TerminalNode TRUE() { return getToken(GramaticaParser.TRUE, 0); }
		public ConrealContext(CondContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitConreal(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ParconContext extends CondContext {
		public CondContext cond() {
			return getRuleContext(CondContext.class,0);
		}
		public ParconContext(CondContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitParcon(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ConditioContext extends CondContext {
		public Token op;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode MAYORQ() { return getToken(GramaticaParser.MAYORQ, 0); }
		public TerminalNode MENORQ() { return getToken(GramaticaParser.MENORQ, 0); }
		public TerminalNode MENORIGUAL() { return getToken(GramaticaParser.MENORIGUAL, 0); }
		public TerminalNode MAYORIGUAL() { return getToken(GramaticaParser.MAYORIGUAL, 0); }
		public TerminalNode IGUAL() { return getToken(GramaticaParser.IGUAL, 0); }
		public TerminalNode DIFERENTE() { return getToken(GramaticaParser.DIFERENTE, 0); }
		public ConditioContext(CondContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitConditio(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ConfictusContext extends CondContext {
		public TerminalNode FALSE() { return getToken(GramaticaParser.FALSE, 0); }
		public ConfictusContext(CondContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitConfictus(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CondContext cond() throws RecognitionException {
		return cond(0);
	}

	private CondContext cond(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		CondContext _localctx = new CondContext(_ctx, _parentState);
		CondContext _prevctx = _localctx;
		int _startState = 20;
		enterRecursionRule(_localctx, 20, RULE_cond, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TRSITE:
			case ID:
			case NUM:
				{
				_localctx = new ConditioContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
